<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".NewTodoActivity">


  <TextView
    android:id="@+id/newTodo_txv"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/new_todo_item"
    android:textColor="@color/color_black"
    android:textSize="@dimen/_25sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/title_editTxt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_64dp"
    android:layout_marginStart="@dimen/_8dp"
    android:layout_marginEnd="@dimen/_8dp"
    android:padding="@dimen/_8dp"
    android:background="@drawable/background_border"
    android:hint="@string/hint_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/newTodo_txv"/>

  <EditText
    android:id="@+id/description_editTxt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_32dp"
    android:layout_marginStart="@dimen/_8dp"
    android:layout_marginEnd="@dimen/_8dp"
    android:paddingBottom="@dimen/_200dp"
    android:paddingStart="@dimen/_8dp"
    android:paddingEnd="@dimen/_0dp"
    android:background="@drawable/background_border"
    android:hint="@string/hint_desc"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title_editTxt"/>

  <Button
    android:id="@+id/button_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_16dp"
    android:layout_marginStart="@dimen/_16dp"
    android:text="@string/cancel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/button_done"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_16dp"
    android:layout_marginEnd="@dimen/_16dp"
    android:text="@string/done"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>